# feed

./: .gitignore  .mcp.json  CMakeLists.txt  MCP.md  Makefile  README.md
include/: api.h  classifier.h  commands.h  config.h  github_client.h  search.h  storage.h
mcp/: mcp_server.cpp  mcp_wrapper.cpp
scripts/: README.md  generate-digest.sh
src/: api.cpp  classifier.cpp  cli_main.cpp  commands.cpp  github_client.cpp  main.cpp  search.cpp  storage.cpp
tests/: mock_github_client.h  test_api.cpp  test_classifier.cpp  test_main.cpp  test_search.cpp  test_storage.cpp
